# qa-diff

./: CLAUDE.md  Makefile  README.md  dev_refactor_tests_ 2026_01_07_05_00.csv  generate_all_infores_reports.sh  pyproject.toml  sprint_6_tests_ 2026_01_04_05_00.csv
src/qa_diff/: __init__.py  cli.py  diff_test_results.py  shared.py
test_diffs/: infores_comparison_infores_ctd.json  infores_edges_only_in_ci_detailed_infores_ctd.json  infores_edges_only_in_ci_detailed_infores_ctd.tsv  infores_only_in_ci_summary_infores_ctd.json
