[project]
name = "qa-diff"
version = "0.1.0"
description = "Analyze differences between automated test results"
readme = "README.md"
authors = [
    { name = "Sierra Taylor Moxon", email = "sierra.taylor@gmail.com" }
]
requires-python = ">=3.9, <4.0"
dependencies = [
    "httpx>=0.27.0",
]

[project.scripts]
qa-diff = "qa_diff.cli:main"

[build-system]
requires = ["uv_build>=0.9.7,<0.10.0"]
build-backend = "uv_build"
